# maxicoceres-data.github.io

./: .gitignore  README.md  app.py  crear_db.py  encrypt_db.py  fernet.py  generar_web.py  index.html  mantenimiento.py  pyproject.toml  setup.cfg  style.css
data/: proyectos.db
function/: __init__.py  data_google_sheets.py  eliminar_proyecto.py  generar_web.py  login.py  mantenimiento.py  modificar_proyecto.py  path.py  subir_portfolio.py  subir_proyectos.py
portfolio_analisis.egg-info/: PKG-INFO  SOURCES.txt
utils/: fernet_db.py
