[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-analisis"
version = "0.0.0"
description = "Portfolio análisis"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Maximiliano Cóceres" } ]

[tool.poetry]
name = "portfolio-analisis"
version = "0.1.0"
description = ""
authors = ["Maximiliano Cóceres"]
package-mode = false  # <--- AÑADE ESTA LÍNEA